--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "Scroll",
   "version": "1.1.0",
   "description": "Navigate long conversations on Claude, ChatGPT, and Gemini",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": ["activeTab"],
   "content_scripts": [
     {
